<resources>
    <string name="app_name">Notas_App_SQLite</string>
    <string name="txtAgregaNota">Agregar nota</string>
    <string name="etTitulo">Título de la nota</string>
    <string name="etDescripcion">Descripción de la nota</string>
    <string name="descGuardar">Guardar nota</string>
    <string name="descAgregar">Agregar nota</string>
    <string name="descEditar">Editar nota</string>
    <string name="txtNotas">Notas</string>
    <string name="item_titulo">Titulo</string>
    <string name="item_descripcion">Descripcion</string>
    <string name="txtActualizarNota">Actualizar nota</string>
</resources>