<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/morado_claro"
    tools:context=".AgregarNotaACTIVITY">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/txtAgregarNota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtAgregaNota"
            android:textColor="@color/morado"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivGuardarNota"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/descGuardar"
            android:src="@drawable/ic_check"
            app:tint="@color/morado" />

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTitulo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etTitulo"
        app:boxStrokeColor="@color/morado"
        app:hintTextColor="@color/morado">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDescripcion"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/etDescripcion"
        app:boxStrokeColor="@color/morado"
        app:hintTextColor="@color/morado">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDescripcion"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:gravity="top"
            android:inputType="textMultiLine|textCapSentences"
            android:minLines="4"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>