<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/ivActualizar"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_titulo"
                android:textColor="@color/morado"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/item_descripcion"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ivActualizar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/descEditar"
            android:src="@drawable/ic_editar"
            app:tint="@color/morado" />

        <ImageView
            android:id="@+id/ivEliminar"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_eliminar"
            android:layout_width="25dp"
            android:layout_height="25dp"/>





    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>